--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ menu:
     url:          /
 
   - title:        About
-    url:          /about
+    url:          http://www.nopressure.co.uk/blog/about
 
 copyright:
   author:         NoPressuRe
