--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Dependencies
 markdown:	kramdown
 # Permalinks
-permalink:	/blog/:title
+permalink:	/:title
 
 # Setup
 title:            NoPressuRe
