--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink:	/:title
 title:            NoPressuRe
 tagline:          'blog'
 description:      'NoPressuRe blog.'
-url:              http://www.nopressure.co.uk/blog
-baseurl:          http://www.nopressure.co.uk/blog
+url:              /blog
+baseurl:          http://www.nopressure.co.uk
 commentsystem:
 disqus:
 
