--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ tagline:          'blog'
 description:      'NoPressuRe blog.'
 url:              /blog
 baseurl:          http://www.nopressure.co.uk
-commentsystem:
-disqus:
+commentsystem:    ''
+disqus:           ''
 
 author:
   name:           NoPressuRe
