--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ social:
     desc:         Fork me on github
 
   - icon:         tumblr
-    url:          https://blog.nopressure.co.uk
+    url:          https://tumblr.nopressure.co.uk
     desc:         Follow me on tumblr
 
   - icon:         feed
